--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,10 @@ numpy>=1.23,<2.0
 scikit-learn>=1.3.2
 scipy
 pandas
-opencv-python
+opencv-python-headless>=4.5.5.64
 Pillow
 openpyxl
-opencv-python-headless>=4.5.5.64
 openai>=1.0.0
-python-dotenv
+python-dotenv>=1.0.0
 gspread>=5.8.0
 google-auth>=2.20.0
-python-dotenv
