--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
 streamlit>=1.45.1
-easyocr>=1.7.2
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
+pytesseract>=0.3.10
+Pillow>=9.0.0
 numpy>=1.23,<2.0
-scikit-learn>=1.3.2
-scipy
 pandas
 opencv-python-headless>=4.5.5.64
-Pillow
-openpyxl
 openai>=1.0.0
-python-dotenv>=1.0.0
 gspread>=5.8.0
 google-auth>=2.20.0
